[package]
name = "rmjunk"
version = "0.1.0"
edition = "2021"
description = "Tool to remove junk files such as `.DS_Store` and `Thumbs.db` from directories"
license = "MIT OR Apache-2.0"
repository = "https://github.com/amachang/rmjunk"
keywords = ["rmjunk", "junk", "DS_Store", "swp", "Thumbs_db"]
categories = ["filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
junk_file = "0.1.1"
